テーマカラーを設定
テーマカラーを設定しました。

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,22 +3,32 @@
 
 /** Ionic CSS Variables **/
 :root {
+  /** 使用するカラー **/
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary: #FFB640;
+  --ion-color-primary-rgb: 255, 182, 64;
+  --ion-color-primary-contrast: #000000;
+  --ion-color-primary-contrast-rgb: 0, 0, 0;
+  --ion-color-primary-shade: #e0a038;
+  --ion-color-primary-tint: #ffbd53;
+
+  /** dark **/
+  --ion-color-dark: #363636;
+  --ion-color-dark-rgb: 54, 54, 54;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255, 255, 255;
+  --ion-color-dark-shade: #303030;
+  --ion-color-dark-tint: #4a4a4a;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
+  --ion-color-secondary: #42574A;
+  --ion-color-secondary-rgb: 66, 87, 74;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+  --ion-color-secondary-shade: #3a4d41;
+  --ion-color-secondary-tint: #55685c;
 
+  /** 使用しないカラー **/
   /** tertiary **/
   --ion-color-tertiary: #7044ff;
   --ion-color-tertiary-rgb: 112, 68, 255;
@@ -51,13 +61,6 @@
   --ion-color-danger-shade: #d33939;
   --ion-color-danger-tint: #f25454;
 
-  /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 34, 34;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
 
   /** medium **/
   --ion-color-medium: #989aa2;
