--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,15 +32,27 @@
     background-image: url("../assets/bg_hobby.jpg");
     background-position: center;
     height: 100vh;
-    position: relative;
 
     .card {
       background-color: #ffffff;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 80%;
+      border-radius: 3rem;
+      margin: 0 auto;
+      margin-top: 3rem;
+      padding: 2rem 1rem;
+      width: 85%;
+
+      .title {
+        margin-bottom: 1rem;
+        width: 70%;
+
+        &.small {
+          width: 50%;
+        }
+      }
+
+      .massage {
+        margin-bottom: 1rem;
+      }
     }
   }
 
