--- a/src/app/tutorial/tutorial.html
+++ b/src/app/tutorial/tutorial.html
@@ -26,12 +26,16 @@
                 </div>
             </ion-slide>
             <ion-slide>
-                <p>とうろく</p>
-                <h1>おとうさん</h1>
+                <div class="card">
+                    <p>とうろく</p>
+                    <h1>おとうさん</h1>
+                </div>
             </ion-slide>
             <ion-slide>
-                <p>とうろく</p>
-                <h1>おかあさん</h1>
+                <div class="card">
+                    <p>とうろく</p>
+                    <h1>おかあさん</h1>
+                </div>
             </ion-slide>
         </ion-slides>
     </div>
