スタイル調整

--- a/src/app/tutorial/tutorial.html
+++ b/src/app/tutorial/tutorial.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <img class="title" src="../../assets/logo.jpg">
                     <img class="massage" src="../../assets/message.jpg">
-                    <ion-button class="test-button" color="primary" shape="round" expand="full">
+                    <ion-button color="primary" shape="round" expand="full">
                         はじめる
                     </ion-button>
                 </div>
@@ -14,28 +14,63 @@
                 <div class="card">
                     <img class="title small" src="../../assets/logo.jpg" alt="">
                     <p>おとうさんやおかあさん、おじいちゃんやおばあちゃん。きみのみじかにいるひとを、きみがひょうかするんだ！みんなのいいところをどんどんみつけよう！</p>
-                    <ion-button class="test-button" color="primary" shape="round" expand="full">
+                    <ion-button color="primary" shape="round" expand="full">
                         つぎへ
                     </ion-button>
                 </div>
             </ion-slide>
             <ion-slide>
-                <div class="card">
-                    <p>とうろく</p>
-                    <h1>じぶん</h1>
+                <div class="card fit">
+                    <p class="m-0">とうろく</p>
+                    <h1 class="font-bold">じぶん</h1>
+                    <p class="m-0">ニックネーム</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">せいねんがっぴ</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">せいべつ</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">とどうふけん</p>
+                    <ion-input clearInput value=""></ion-input>
                 </div>
+                <ion-button class="test-button" color="primary" shape="round" expand="full">
+                    つぎへ
+                </ion-button>
             </ion-slide>
             <ion-slide>
-                <div class="card">
-                    <p>とうろく</p>
-                    <h1>おとうさん</h1>
+                <div class="card fit">
+                    <p class="m-0">とうろく</p>
+                    <h1 class="font-bold">おとうさん</h1>
+                    <p class="m-0">ニックネーム</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">せいねんがっぴ</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">メールアドレス</p>
+                    <ion-input clearInput value=""></ion-input>
                 </div>
+                <ion-button class="test-button" color="medium" shape="round" expand="full">
+                    もどる
+                </ion-button>
+                <ion-button class="test-button" color="primary" shape="round" expand="full">
+                    つぎへ
+                </ion-button>
             </ion-slide>
             <ion-slide>
-                <div class="card">
-                    <p>とうろく</p>
-                    <h1>おかあさん</h1>
+                <div class="card fit">
+                    <p class="m-0">とうろく</p>
+                    <h1 class="font-bold">おかあさん</h1>
+                    <p class="m-0">ニックネーム</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">せいねんがっぴ</p>
+                    <ion-input clearInput value=""></ion-input>
+                    <p class="m-0">メールアドレス</p>
+                    <ion-input clearInput value=""></ion-input>
                 </div>
+                <ion-button class="test-button" color="medium" shape="round" expand="full">
+                    もどる
+                </ion-button>
+                <ion-button class="test-button" color="primary" shape="round" expand="full">
+                    さっそくはじめる！
+                </ion-button>
             </ion-slide>
         </ion-slides>
     </div>
