--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,6 +28,22 @@
   --ion-color-secondary-shade: #3a4d41;
   --ion-color-secondary-tint: #55685c;
 
+  /** medium **/
+  --ion-color-medium: #D6D6D6;
+  --ion-color-medium-rgb: 214, 214, 214;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0, 0, 0;
+  --ion-color-medium-shade: #bcbcbc;
+  --ion-color-medium-tint: #dadada;
+
+  /** tertiary **/
+  --ion-color-tertiary: #EDFBFF;
+  --ion-color-tertiary-rgb: 237, 251, 255;
+  --ion-color-tertiary-contrast: #000000;
+  --ion-color-tertiary-contrast-rgb: 0, 0, 0;
+  --ion-color-tertiary-shade: #d1dde0;
+  --ion-color-tertiary-tint: #effbff;
+
   .report-book {
     background-image: url("../assets/bg_hobby.jpg");
     background-position: center;
@@ -39,7 +55,12 @@
       margin: 0 auto;
       margin-top: 3rem;
       padding: 2rem 1rem;
+      height: 85vh;
       width: 85%;
+
+      &.fit {
+        height: auto;
+      }
 
       .title {
         margin-bottom: 1rem;
@@ -54,16 +75,41 @@
         margin-bottom: 1rem;
       }
     }
+
+    .test-button {
+      width: 80%;
+      margin: .5rem auto;
+    }
+  }
+
+  ion-input {
+    --background: var(--ion-color-tertiary);
+    border-radius: .5rem;
+    border: solid .05rem #000000;
+    margin-bottom: 1rem;
+  }
+
+  ion-button {
+    --color: #ffffff
+  }
+
+  .fs12 {
+    font-size: 1.2rem;
+  }
+
+  .fs14 {
+    font-size: 1.4rem;
+  }
+
+  .font-bold {
+    font-weight: bold;
+  }
+
+  .m-0 {
+    margin: 0;
   }
 
   /** 使用しないカラー **/
-  /** tertiary **/
-  --ion-color-tertiary: #7044ff;
-  --ion-color-tertiary-rgb: 112, 68, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
-  --ion-color-tertiary-tint: #7e57ff;
 
   /** success **/
   --ion-color-success: #10dc60;
@@ -88,15 +134,6 @@
   --ion-color-danger-contrast-rgb: 255, 255, 255;
   --ion-color-danger-shade: #d33939;
   --ion-color-danger-tint: #f25454;
-
-
-  /** medium **/
-  --ion-color-medium: #989aa2;
-  --ion-color-medium-rgb: 152, 154, 162;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
 
   /** light **/
   --ion-color-light: #f4f5f8;
