--- a/src/app/tutorial/tutorial.html
+++ b/src/app/tutorial/tutorial.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <img class="title" src="../../assets/logo.jpg">
                     <img class="massage" src="../../assets/message.jpg">
-                    <ion-button color="primary" shape="round" expand="full">
+                    <ion-button color="primary" shape="round" expand="full" (click)="next()">
                         はじめる
                     </ion-button>
                 </div>
@@ -14,7 +14,7 @@
                 <div class="card">
                     <img class="title small" src="../../assets/logo.jpg" alt="">
                     <p>おとうさんやおかあさん、おじいちゃんやおばあちゃん。きみのみじかにいるひとを、きみがひょうかするんだ！みんなのいいところをどんどんみつけよう！</p>
-                    <ion-button color="primary" shape="round" expand="full">
+                    <ion-button color="primary" shape="round" expand="full" (click)="next()">
                         つぎへ
                     </ion-button>
                 </div>
