--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+    <div class="evaluation-select">
+        <div class="card">
+            <h2 class="mb-3">だれをひょうかする？</h2>
+            <ion-button class="select-button" shape="round" expand="full">
+                おとうさん
+            </ion-button>
+            <ion-button class="select-button" shape="round" expand="full">
+                おかあさん
+            </ion-button>
+            <ion-button class="select-button" shape="round" expand="full">
+                えらぶ
+            </ion-button>
+        </div>
+    </div>
 </ion-content>
