--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,17 +16,26 @@
 
     .select-button {
       --background: var(--ion-color-secondary-contrast);
+      --border-width: 3px;
       margin-bottom: 1rem;
+      color: var(--ion-color-dark);
+      font-weight: bold;
 
-      &:nth-child(1) {
-        border: solid .1rem red;
+      &.first {
+        --border-color: var(--ion-color-blue);
       }
 
-      &:nth-child(2) {
+      &.second {
+        --border-color: var(--ion-color-danger);
       }
 
-      &:nth-child(3) {
+      &.third {
+        --border-color: var(--ion-color-warning);
       }
     }
   }
+}
+
+ion-button {
+  --color: var(--ion-color-dark)
 }
