--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,13 +2,13 @@
     <div class="evaluation-select">
         <div class="card">
             <h2 class="mb-3">だれをひょうかする？</h2>
-            <ion-button class="select-button first" shape="round" expand="full" fill="outline">
+            <ion-button class="select-button first" shape="round" expand="full" fill="outline" (click)="navigateTo()">
                 おとうさん
             </ion-button>
-            <ion-button class="select-button second" shape="round" expand="full" fill="outline">
+            <ion-button class="select-button second" shape="round" expand="full" fill="outline" (click)="navigateTo()">
                 おかあさん
             </ion-button>
-            <ion-button class="select-button third" shape="round" expand="full" fill="outline">
+            <ion-button class="select-button third" shape="round" expand="full" fill="outline" (click)="navigateTo()">
                 えらぶ
             </ion-button>
         </div>
