--- a/src/app/review/review.page.scss
+++ b/src/app/review/review.page.scss
@@ -4,10 +4,15 @@
   position: relative;
 
   .card {
+    padding: 3rem 1rem;
+    background-color: #ffffff;
+    border-radius: .5rem;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 85%;
+    text-align: center;
 
     .Q {
       span {
